style movie display, fix sidebar scroll cutoff

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,12 @@ p, button, input, select {
   color: $COLOR_TEXT;
 }
 
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 button {
   border: none;
   background-color: $COLOR_PRIMARY_FADED;
