--- a/src/components/movies/movies.scss
+++ b/src/components/movies/movies.scss
@@ -84,8 +84,9 @@ $FILTER_INPUT_WIDTH: min(200px, 20vw);
 .filter-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: auto 1fr;
   column-gap: 8px;
+  row-gap: 8px;
   .filter-select {
     grid-row: 2 / 3;
     display: flex;
@@ -103,7 +104,7 @@ $FILTER_INPUT_WIDTH: min(200px, 20vw);
   }
 
   .filter-tags {
-    grid-row: 2 / 3;
+    grid-row: 1 / 3;
     grid-column: 2 / 3;
     display: flex;
     flex-wrap: wrap;
